// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-stylus > should add stylus loader config correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.styl\\(us\\)\\?\\$/,
      },
    ],
  },
}
`;

exports[`plugin-stylus > should allow to configure stylus options 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                  "stylusOptions": {
                    "lineNumbers": false,
                  },
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                  "stylusOptions": {
                    "lineNumbers": false,
                  },
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.styl\\(us\\)\\?\\$/,
      },
    ],
  },
}
`;
